# AgentMailBridge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-build.txt  requirements.txt  第一批次实现报告.md  第二批次实现报告.txt
agent_mail_bridge/: __init__.py  __main__.py  account_runtime.py  application_service.py  cli.py  config.py  credentials.py  database.py  desktop_runtime.py  diagnose.py  file_index.py  gmail_api_auth.py  gmail_api_receive.py  gui.py  imap_sync.py  logging_setup.py  mail_accounts.py  mail_archive.py  mail_common.py  mail_facts.py  mail_links.py  mail_processing.py  mail_receive.py  mail_resource_access.py  mail_send.py  mail_summaries.py  maintenance.py  managed_files.py  mcp_client_config.py  mcp_server.py  models.py  network.py  oauth_flow.py  oauth_storage.py  performance.py  process_lock.py  provider_adapters.py  provider_foundation.py  receive_rules.py  runtime_paths.py  (+5 more)
agent_mail_bridge/ui/: __init__.py  account_management.py  branding.py  main_window.py  settings_store.py  setup_wizard.py  theme.py  widgets.py
docs/: Agent邮件读取与资源交付设计.md  GUI使用说明.md  Generic IMAP SMTP 与 QQ 163 双向收发设计.md  Gmail OAuth配置与故障排查说明.md  MCP使用说明.md  MCP邮件读取工具说明.md  Multi-Account Runtime 与 Provider Foundation 设计.md  Provider 支持矩阵与 QQ 163 配置说明.md  Windows安装与升级说明.md  发布检查清单.md  安全与诊断说明.md  统一邮件归档设计.md  邮件事实查询说明.md
docs/reports/: 2026-07-11_界面交互修复报告.md  AgentMailBridge_v1.0.0_UI交互与Windows视觉质量专项整改报告.md  AgentMailBridge_v1.0.0_产品化收口与发布验收报告.md  AgentMailBridge_v1.0.0_历史文件数据与收件规则专项整改报告.md  (+19 more)
scripts/: build_windows.ps1  clean_build.ps1  full_suite_preflight.py  packaged_real_send_e2e.py  packaged_smoke.py  provider_interop_validation.py  provider_mime_receive_validation.py  provider_validation.py  secret_scan.py  verify_build.ps1
tests/: conftest.py  test_account_management_ui.py  test_core_reliability.py  test_database.py  test_diagnose.py  test_file_index.py  test_filename_sanitize.py  test_first_batch_core.py  test_gmail_api_auth.py  test_gmail_api_config.py  test_gmail_api_receive.py  test_gui_productization.py  test_gui_second_batch.py  test_gui_stage_5_5.py  test_mail_archive_facts.py  test_mail_level_gui.py  test_mail_level_outbound_agent.py  test_mcp.py  test_network.py  test_network_config.py  test_oauth_hotfix.py  test_receive_rules_managed_files_history.py  test_stage_a_global_send.py  test_stage_b_credentials.py  test_stage_c_maintenance.py  test_stage_d_stability.py  test_storage.py  test_ui_interaction_quality.py  test_v1_1_mail_search_logs_encoding.py  test_v1_2_mcp_mail_read.py  test_v1_3_contacts_send_links.py  test_v1_3_gui_migration_resources.py  test_v1_3_receive_semantics.py  test_v1_4_1_multi_account_runtime.py  test_v1_4_1_multi_account_ui.py  test_v1_4_2_generic_mail.py  test_v1_4_3_provider_hardening.py  test_v1_4_multi_account_core.py  test_v1_product_closure.py  test_windows_productization.py
(+5 files in other folders)
