[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mail-bridge"
version = "0.1.0"
description = "Agent Mail Bridge - 面向 AI Agent 工作流的本地邮箱桥接工具（第一阶段 CLI）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentMailBridge" }]
dependencies = [
    "python-dotenv>=1.0.0",
    "PySocks>=1.7.1",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0.0"]
dev = ["pytest>=7.4.0"]

[project.scripts]
agent-mail-bridge = "agent_mail_bridge.cli:main"
agent-mail-bridge-gui = "agent_mail_bridge.gui:main"

[tool.setuptools.packages.find]
include = ["agent_mail_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
